--- a/MossTalkWords/bin/AndroidManifest.xml
+++ b/MossTalkWords/bin/AndroidManifest.xml
@@ -17,14 +17,16 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="edu.upenn.cis350.mosstalkwords.PickSet"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="edu.upenn.cis350.mosstalkwords.MainActivity" />
+        <activity android:name="edu.upenn.cis350.mosstalkwords.MainActivity" 
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
