--- a/MossTalkWords/bin/AndroidManifest.xml
+++ b/MossTalkWords/bin/AndroidManifest.xml
@@ -27,6 +27,10 @@
         </activity>
         <activity android:name="edu.upenn.cis350.mosstalkwords.MainActivity" 
             android:screenOrientation="portrait"/>
+        
+        <activity android:name="edu.upenn.cis350.mosstalkwords.EndSet" 
+            android:screenOrientation="portrait"/>
+        
     </application>
 
 </manifest>
