Made score change animation more prominent and also made help screen look better

--- a/MossTalkWords/AndroidManifest.xml
+++ b/MossTalkWords/AndroidManifest.xml
@@ -29,6 +29,7 @@
             android:screenOrientation="portrait"/>
         
         <activity android:name="edu.upenn.cis350.mosstalkwords.HelpTextActivity" 
+            android:theme="@android:style/Theme.Dialog"
             android:screenOrientation="portrait"/>
         
         <activity android:name="edu.upenn.cis350.mosstalkwords.EndSet" 
