--- a/MossTalkWords/AndroidManifest.xml
+++ b/MossTalkWords/AndroidManifest.xml
@@ -5,6 +5,7 @@
     android:versionName="1.0" 
     >
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
 
     <uses-sdk
         android:minSdkVersion="8"
